# interface-audio-difficulty

./: app.py  get_difficulty.py  model.py  pyproject.toml  temp.mid  utils.py
models/audio_midi_cqt10_ps_v5/: experiment_0_monitoring.pkl  experiment_1_monitoring.pkl  experiment_2_monitoring.pkl  experiment_3_monitoring.pkl  experiment_4_monitoring.pkl
models/audio_midi_cqt5_ps_v5/: experiment_0_monitoring.pkl  experiment_1_monitoring.pkl  experiment_2_monitoring.pkl  experiment_3_monitoring.pkl  experiment_4_monitoring.pkl
models/audio_midi_cqt5composer_v1/: experiment_0_monitoring.pkl  experiment_1_monitoring.pkl  experiment_2_monitoring.pkl  experiment_3_monitoring.pkl  experiment_4_monitoring.pkl
models/audio_midi_cqt5era_v1/: experiment_0_monitoring.pkl  experiment_1_monitoring.pkl  experiment_2_monitoring.pkl  experiment_3_monitoring.pkl  experiment_4_monitoring.pkl
models/audio_midi_cqt5multiranking_v10/: experiment_0_monitoring.pkl  experiment_1_monitoring.pkl  experiment_2_monitoring.pkl  experiment_3_monitoring.pkl  experiment_4_monitoring.pkl
models/audio_midi_multi_ps_v5/: experiment_0_monitoring.pkl  experiment_1_monitoring.pkl  experiment_2_monitoring.pkl  experiment_3_monitoring.pkl
models/audio_midi_multi_ps_v5_drop/: experiment_0_monitoring.pkl  experiment_1_monitoring.pkl  experiment_2_monitoring.pkl  experiment_3_monitoring.pkl  experiment_4_monitoring.pkl
models/audio_midi_pianoroll_ps_10_v5/: experiment_0_monitoring.pkl  experiment_1_monitoring.pkl  experiment_2_monitoring.pkl  experiment_3_monitoring.pkl  experiment_4_monitoring.pkl
(+20 files in other folders)
